# minesweeper-backend

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: release-drafter.yml
.github/workflows/: main.yml  on_release.yml  release-drafter-releaser.yml  stage.yml
api/: urls.py
api/resources/: game.py  main.py
api/serializers/: __init__.py  game.py
app/: settings.py  urls.py  utils.py
commands/: run-prod.sh  run.sh
core/: admin.py  managers.py  models.py
core/migrations/: 0001_initial.py  0002_auto_20201105_0303.py  0003_auto_20201106_0152.py  0004_alter_user_id.py
game/: admin.py  apps.py  game.py  models.py  signals.py
game/migrations/: 0001_initial.py  0002_auto_20201106_0225.py  0003_gameevent.py  0004_auto_20201106_0453.py  0005_auto_20201106_2357.py  0006_auto_20201107_0010.py  0007_auto_20201107_0130.py  0008_alter_game_id_alter_gameevent_id_and_more.py
game/tests/: test_game.py
internal/: __init__.py  utils.py
